made a real finalized version with a little help.

--- a/index.html
+++ b/index.html
@@ -5,71 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
 
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap"
+      rel="stylesheet"
+    />
+    <!------------------>
+
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="css/style.css" />
 
     <title>Frontend Mentor | 3-column preview card component</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
-
   <body>
-    <main class="main">
-      <section class="card card__sedan">
-        <div class="top-half">
-          <img class="card__img" src="images/icon-sedans.svg" alt="Sedans" />
-          <h2 class="vehicle-type">Sedans</h2>
+    <div class="main">
+      <div class="card card__sedans">
+        <div class="top">
+          <img src="images/icon-sedans.svg" alt="Sedans" />
+          <h3>Sedans</h3>
           <p>
             Choose a sedan for its affordability and excellent fuel economy.
             Ideal for cruising in the city or on your next road trip.
           </p>
         </div>
-        <div class="bottom-half">
-          <a href="#" class="btn">Learn More</a>
+        <div class="bot">
+          <button class="btn">Learn More</button>
         </div>
-      </section>
-      <section class="card card__suv">
-        <div class="top-half">
-          <img class="card__img" src="images/icon-suvs.svg" alt="SUVs" />
-          <h2 class="vehicle-type">SUVs</h2>
+      </div>
+      <div class="card card__suvs">
+        <div class="top">
+          <img src="images/icon-suvs.svg" alt="SUVs" />
+          <h3>SUVs</h3>
           <p>
             Take an SUV for its spacious interior, power, and versatility.
             Perfect for your next family vacation and off-road adventures.
           </p>
         </div>
-        <div class="bottom-half">
-          <a href="#" class="btn">Learn More</a>
-        </div>
-      </section>
-      <section class="card card__luxury">
-        <div class="top-half">
-          <img
-            class="card__img"
-            src="images/icon-luxury.svg"
-            alt="Luxury sedans section"
-          />
-          <h2 class="vehicle-type">Luxury</h2>
+        <div class="bot"><button class="btn">Learn More</button></div>
+      </div>
+      <div class="card card__luxury">
+        <div class="top">
+          <img src="images/icon-luxury.svg" alt="Luxury" />
+          <h3>Luxury</h3>
           <p>
             Cruise in the best car brands without the bloated prices. Enjoy the
             enhanced comfort of a luxury rental and arrive in style.
           </p>
         </div>
-        <div class="bottom-half">
-          <a href="#" class="btn">Learn More</a>
-        </div>
-      </section>
-    </main>
-  </body>
-</html>
-
-<!-- <div class="attribution">
+        <div class="bot"><button class="btn">Learn More</button></div>
+      </div>
+    </div>
+    <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
+      >
+      Coded by <a href="#">Roy Allan</a>.
+    </div>
+  </body>
+</html>
